# OKO

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml
data/: README.md  schema.postgresql.sql  schema.sql
deploy/: Dockerfile.api-nest  Dockerfile.portal
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/icons/: icon.icns  rachel.c@example.org
desktop/tauri/src-tauri/src/: lib.rs  main.rs
docs/: ACCESS-GUIDE-CHECKLIST.md  ARCHITECTURE.md  AUDIT-OVERVIEW.md  CHAT-LOG.md  DEPLOY.md  DESKTOP-FILLER-TZ.md  DESKTOP-SIGNING.md  DESKTOP-TAURI-GAP-CHECKLIST.md  DESKTOP-TAURI-PILOT.md  DEVELOPMENT.md  LOCAL-POSTGRES.md  OFFLINE-EXCHANGE.md  PHASE2-PLAN.md  PHASE3-PLAN.md  PORTAL-GUIDE.md  PROMPT-ALTERNATIVA.md  PROMPT-CELEVOY.md  README.md  TZ-OKO-IMPORTOZAMESHENIE.docx  TZ-OKO-IMPORTOZAMESHENIE.txt  ZAPROS-ISCHODNIKI-ACCESS-ZAKAZCHIKU.docx  generate_access_sources_docx.py  generate_tz_oko_docx.py  ОКО-архитектура-файлы-увязки.md  Спич-защита-стека-ОКО-и-сравнение-с-1С.docx  Спич-защита-стека-ОКО-и-сравнение-с-1С.html
portal/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
reference/: README.md  ini20261.ini  txt2026-1KV.TXT  ШаблоныФорм-МинФин.xlsx
scripts/: README.md  acceptance-desktop.sh  acceptance-tz-remaining.py  api_journey.mjs  build-offline-kit.sh  check_encoding.py  check_n02_6.py  compare_forms.py  (+29 more)
(+385 files in other folders)
