[package]
name = "oko-filler-tauri"
version = "0.1.0"
description = "OKO Filler — Tauri 2 desktop"
authors = ["OKO"]
edition = "2021"

[lib]
name = "oko_filler_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1.23.5", features = ["v4"] }
time = { version = "0.3.53", features = ["formatting"] }
sha2 = "0.11.0"
hex = "0.4.3"
getrandom = { version = "0.4.3", features = ["std"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
